<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.monts.manualidades.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <ImageView
                android:id="@+id/Imagen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />
                </android.support.design.widget.TextInputLayout>
                //El raise botton con efecto de agua y se le pone el style
                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"

                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        />
                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_toRightOf="@id/dontHaveAccount"
                        android:onClick="goCreateAccount"/>
                    //torigught es para que se ponga a un lado del otro elemento

                    <Button
                        android:id="@+id/servicio"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:onClick="clickservicio"
                        android:text="Servicio"
                        android:theme="@style/RaisedButtonDark"
                        android:layout_alignParentBottom="true"
                        android:layout_toLeftOf="@+id/createHere"
                        android:layout_toStartOf="@+id/createHere"
                        android:layout_marginRight="19dp"
                        android:layout_marginEnd="19dp" />
                    <Button
                        android:id="@+id/alarma"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:onClick="clickservicio"
                        android:text="Alarma"
                        android:theme="@style/RaisedButtonDark"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:layout_toEndOf="@+id/dontHaveAccount" />

                    </RelativeLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
